Fixing Alignment of IP Final Values & other cosmetic fixes (#28)
* fixing css

* adding download example page

* adding upload example page

* adding latency example page

* removed database file

* fixing css and html issues

* adding IPv6 default to IPv4 during test failures to repo

--- a/public/speed-testJS.css
+++ b/public/speed-testJS.css
@@ -8,6 +8,11 @@ body {
     font-size: 16px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+.flex {
+    flex: 1;
+}
+
 .container {
     width: 500px;
     background-color: #fff;
@@ -31,6 +36,7 @@ body {
 .results {
     color: #fff;
 }
+
 .results,
 .secondary-results {
     display: flex;
@@ -39,10 +45,11 @@ body {
     font-weight: 700;
     align-items: center;
 }
-.latency,
-.download {
-    flex: 1;
+
+.secondary-results{
+    position: relative;
 }
+
 .logo {
     background-image: url("img/icons.png");
     background-position: 0px -897px;
@@ -57,11 +64,10 @@ body {
     padding: 0;
 }
 .action-start{
-    position: relative;
     background-color: #474747;
     color: #fff;
     padding: 5px;
-    font-weight: 700px;
+    font-weight: 700;
     border: 1px solid #ccc;
     box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .28);
     cursor: pointer;
@@ -101,6 +107,13 @@ body {
     text-transform: lowercase;
 }
 
-.IPv6{
+.hide{
     display: none;
 }
+
+[aria-disabled=true] {
+    background-color: #d1d1d1;
+    cursor: not-allowed;
+}
+
+
